Fix clickable transparent card, card top align & popular menu link states

--- a/src/stories/Molecules/List/List.css
+++ b/src/stories/Molecules/List/List.css
@@ -41,14 +41,20 @@
 }
 
 .with_menu .list__item {
-  color: var(--color-primary);
-  font-size: 18px;
-  font-weight: 700;
+  font-size: var(--s0);
   line-height: var(--s5);
   margin: 0;
-  list-style: none;
 }
 
 .with_menu .list__item a {
-  font-family: var(--font-secondary);  
+  font-family: var(--font-secondary);
+}
+
+.with_menu .list__item a,
+.with_menu .list__item a:hover,
+.with_menu .list__item a:focus,
+.with_menu .list__item a:active,
+.with_menu .list__item a:visited {
+  font-family: var(--font-secondary);
+  color: var(--dynamic-color, var(--color-primary));
 }
